# turtleb0t3_tracking_navigation_aruco_marker

./: README.md
config/config/: aruco.yaml  exam_params.yaml  nav2_params.yaml  skip_b1.yaml  slam_toolbox.yaml
launch/launch/: bringup_slam_nav.launch.py  exam_all.launch.py  exam_all_skip_b1.launch.py  task_a1_path_follow.launch.py  task_a2_qr_turn.launch.py  task_b2_nav_to_goal.launch.py  task_c_dock.launch.py
tb3_final_exam/tb3_final_exam/: aruco.py  docking.py  exam_all.py  nav_client.py  show_cam.py  task_a1_path_follow.py  task_a2_qr_turn.py  task_b2_nav_to_goal.py  task_c_dock.py  vision.py
tb3_simulation/: package.xml  setup.cfg  setup.py
